export const snapshot = {};

snapshot[`cache busting middleware 1`] = `
{
  body: "http://localhost/styles.css",
  headers: {
    "content-type": "text/plain;charset=UTF-8",
  },
  method: "GET",
  request: "http://localhost/v1/styles.css",
  status: 200,
  statusText: "",
}
`;

snapshot[`cache busting middleware 2`] = `
{
  body: "http://localhost/scripts.js",
  headers: {
    "content-type": "text/plain;charset=UTF-8",
  },
  method: "GET",
  request: "http://localhost/v2873/scripts.js",
  status: 200,
  statusText: "",
}
`;
